# ralf

./: Cargo.toml
automata/: Cargo.toml
crates/automata/: Cargo.toml
crates/automata-core/: README.md
crates/automata-core/src/: alphabet.rs
crates/automata-core/src/alphabet/: propositional.rs  simple.rs
crates/automata-core/src/word/: finite.rs  omega.rs
crates/automata-learning/src/passive/: precise.rs  sample.rs
crates/automata/src/: automaton.rs  dot.rs  ts.rs
crates/automata/src/automaton/: omega.rs
crates/automata/src/congruence/: cayley.rs  transitionprofile.rs
crates/automata/src/hoa/: input.rs  output.rs
crates/automata/src/ts/: builder.rs  connected_components.rs  path.rs  run.rs
crates/graphviz-render/: Cargo.toml
crates/graphviz-render/src/: lib.rs
crates/hoars/: Cargo.toml
crates/hoars/src/: body.rs  format.rs  header.rs  label.rs  lexer.rs  lib.rs  output.rs
