[package]
name = "graphviz-render"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
layout-rs = { version = "0.1.2", optional = true }
open = { version = "5.3.2", optional = true }
base64 = { version = "0.22.1", optional = true }
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true, features = [
    "text",
    "system-fonts",
] }
